--- a/Shopping_Project/WebContent/signin.css
+++ b/Shopping_Project/WebContent/signin.css
@@ -1,9 +1,9 @@
-html,body {
+html,
+body {
   height: 100%;
 }
 
 body {
-  text-align: center;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-align: center;
@@ -32,7 +32,7 @@ body {
 .form-signin .form-control:focus {
   z-index: 2;
 }
-.form-signin input[type="text"] {
+.form-signin input[type="email"] {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
