--- a/Shopping_Project/.settings/org.eclipse.wst.common.component
+++ b/Shopping_Project/.settings/org.eclipse.wst.common.component
@@ -2,7 +2,7 @@
     <wb-module deploy-name="Shopping_Project">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="Shopping_Project"/>
         <property name="java-output-path" value="/Shopping_Project/build/classes"/>
+        <property name="context-root" value="Shop_Project"/>
     </wb-module>
 </project-modules>
